--- a/src/pug/db/_data.yaml
+++ b/src/pug/db/_data.yaml
@@ -646,7 +646,7 @@ gta_v:
   title: Grand Theft Auto V
   stub: gta_v
   reviewDate: 2023-03
-  alpakkaProfile: FPS Fusion
+  alpakkaProfile: Console
   alpakkaSensLow: 9
   alpakkaSensMid: 7
   alpakkaSensHigh: 4
